# rdkit-cli

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  test.csv  update_modules.py
docs/: commands.md
examples/: example_workflow.py
include/: conformers.h  data.h  descriptors.h  filters.h  fingerprints.h  progress.h  smiles.h  visualization.h
rdkit_cli/: __init__.py  main.py
rdkit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rdkit_cli/commands/: conformers.py  database.py  descriptors.py  fingerprints.py  fragments.py  io_ops.py  ml_support.py  optimization.py  reactions.py  specialized.py  substructure.py  utils.py  visualization.py
rdkit_cli/core/: __init__.py  common.py  config.py  logging.py
src/: conformers.cpp  data.cpp  descriptors.cpp  filters.cpp  fingerprints.cpp  main.cpp  progress.cpp  smiles.cpp  visualization.cpp
src/rdkit_cli/: __init__.py  cli.py
src/rdkit_cli/commands/: conformers.py  depict.py  descriptors.py  energy.py  filter.py  fingerprints.py  fragment.py  pharmacophore.py  props.py  reactions.py  scaffold.py  similarity.py  standardize.py  stereo.py
src/rdkit_cli/core/: conformers.py  descriptors.py  diversity.py  energy.py  filters.py  fingerprints.py  fragment.py  pharmacophore.py  reactions.py  sascorer.py  scaffold.py  similarity.py  stereo.py
src/rdkit_cli/io/: readers.py
test/: test.py
test/data/: csv-just-smiles.csv  csv-with-cols.csv  mol-just-smiles-2D.mol  smi-just-smiles.smi  smi-with-cols.smi
tests/: CMakeLists.txt  __init__.py  conftest.py  test_conformers.cpp  test_conformers.py  test_data.cpp  test_descriptors.cpp  test_descriptors.py  test_filters.cpp  test_fingerprints.cpp  test_fingerprints.py  test_fragments.py  test_integration.py  test_io_ops.py  test_smiles.cpp  test_substructure.py  test_utils.py
tests/integration/: test_cli.py  test_new_features.py
tests/unit/: test_extended_features.py  test_filters.py  test_shape_constrained_network.py  test_stereo_energy_pharmacophore.py
