# RDKit CLI Package Structure
# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdkit-cli"
version = "0.1.0"
description = "Comprehensive command-line interface for RDKit cheminformatics operations"
authors = [
	{name = "JHG Natter", email = "johan.natter@gmaiL.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
	"rdkit>=2024.3.1",
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"tqdm>=4.65.0",
	"rich-argparse>=1.3.0",
	"colorlog>=6.8.0",
	"pillow>=10.0.0",
	"matplotlib>=3.7.0",
	"seaborn>=0.12.0",
	"scikit-learn>=1.3.0",
	"joblib>=1.3.0",
	"click>=8.1.0",
	"pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-cov>=4.0.0",
	"pytest-mock>=3.12.0",
	"black>=24.0.0",
	"isort>=5.13.0",
	"mypy>=1.8.0",
	"flake8>=7.0.0",
	"ruff>=0.1.0",
]

[project.scripts]
rdkit-cli = "rdkit_cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/rdkit-cli"
Repository = "https://github.com/yourusername/rdkit-cli"
Documentation = "https://rdkit-cli.readthedocs.io"
Changelog = "https://github.com/yourusername/rdkit-cli/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdkit_cli*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
	\.eggs
	| \.git
	| \.hg
	| \.mypy_cache
	| \.tox
	| \.venv
	| _build
	| buck-out
	| build
	| dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["rdkit_cli"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=rdkit_cli --cov-report=term-missing"

[tool.coverage.run]
source = ["rdkit_cli"]
omit = [
	"tests/*",
	"setup.py",
]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"if self.debug:",
	"if settings.DEBUG",
	"raise AssertionError",
	"raise NotImplementedError",
	"if 0:",
	"if __name__ == .__main__.:",
	"class .*\\bProtocol\\):",
	"@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "W", "C", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "C901", "PLR0913", "PLR0915", "PLR2004", "S101", "T201"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ARG"]
"__init__.py" = ["F401"]
